# codax.software.fireops-v2

./: .gitignore  README.md  piccolo_conf.py  pyproject.toml
api/: app.py
database/: piccolo_app.py  tables.py
database/migrations/: database_2023_12_24t17_40_31_294545.py
web-ui/: README.md  package-lock.json  package.json  vite.config.ts
web-ui/src/: hooks.server.ts
web-ui/src/lib/Navigation/: Navigation.svelte
web-ui/src/routes/: +layout.svelte  +page.svelte
web-ui/src/routes/about/: +page.svelte
web-ui/src/routes/incidents/: +page.svelte
